--- a/opmaak.css
+++ b/opmaak.css
@@ -203,7 +203,7 @@ div.naastelkaar {
    padding-left: 10px;
  }
 
- div.driblle{
+ div.dribble{
    background-color: black;
    width: 500px;
    height: 60px;
