--- a/opmaak.css
+++ b/opmaak.css
@@ -204,7 +204,7 @@ div.naastelkaar {
  }
 
 .dribble {
-   background-color: black;
+   background-color: blue;
    width: 500px;
    height: 60px;
    border: 2px solid white;
