--- a/opmaak.css
+++ b/opmaak.css
@@ -204,7 +204,7 @@ div.naastelkaar {
  }
 
 .dribble {
-   background-color: blue;
+   background-color: black;
    width: 500px;
    height: 60px;
    border: 2px solid white;
@@ -216,6 +216,6 @@ div.naastelkaar {
    margin-left: 400px;
    padding-top: 10px;
    padding-right: 10px;
-   padding-bottom: 10px;
+   padding-bottom: 20px;
    padding-left: 10px;
 }
